--- a/crates/webserver/html_src/index.html
+++ b/crates/webserver/html_src/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Calendar App</title>
         <link rel="stylesheet" href="calendar.css" />
+        <script src="components/CustomColorSelect.js"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     </head>
     <body>
